# sf-med

./: README.md  bitbucket-pipelines.yml  example.env  pyproject.toml
analysis/: __init__.py  analysis.Dockerfile  analysis.py  analysis.version  analysis_requirements.txt  entrypoint.py  settings.py
analysis/algorithm/: __init__.py  algo_main.py  algo_utils.py  parameters.py
analysis/example_inputs/: analysis_input_15047.json  analysis_input_8765.json  analysis_input_8767.json
api_sqs_bridge/: __init__.py  api_sqs_bridge.Dockerfile  api_sqs_bridge.py  api_sqs_bridge.version  api_sqs_bridge_requirements.txt  entrypoint.py  settings.py
api_sqs_bridge/example_inputs/: api_sqs_input_8767.json
cicd/: Dockerfile  build.sh
client/: __init__.py  snorefox-med.openapi.yaml  utils.py
client/s3_client/: __init__.py  s3_client.py  s3_client_mixin.py  settings.py
client/sqs_client/: __init__.py  sqs_client.py  sqs_client_mixin.py
